--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./style/second-style.css">
+    <link rel="stylesheet" href="second-style.css">
     <script src="https://kit.fontawesome.com/a6a8337c1e.js" crossorigin="anonymous"></script>
 </head>
 
