--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
         <div class="hero-bg">
             <div class="nav">
-                <div class="site-logo"><a href="https://www.wp.pl"><img src="/grafiki/site-logo2.png"
+                <div class="site-logo"><a href="https://www.wp.pl"><img src="site-logo2.png"
                             alt="Tygrys z łapami jako logo strony"></a></div>
                 <div class="menu-bar">
                     <div class="menu-items">
