cooperation section add

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 possimus. Voluptates!</p>
         </section>
         <section class="zoo-animals wrapper">
-            <h2>Mieszkańcy ZOO</h2>
+            <h2 class="section-title">Mieszkańcy ZOO</h2>
             <div class="animal-boxes">
                 <div class="first-row">
                     <div class="first-animal-group">
@@ -81,6 +81,23 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </section>
+        <section class="cooperation wrapper">
+            <h2 class="section-title">Współpraca</h2>
+            <div class="cooperation-box">
+                <div class="cooperation-text">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, sunt minima. Ex harum nulla eum
+                        recusandae ullam veniam praesentium dolore voluptatem libero soluta fuga cumque commodi sint
+                        placeat maiores debitis, quidem ipsum optio. Excepturi unde ullam corrupti fugiat quibusdam
+                        asperiores reprehenderit, iste, provident numquam voluptatibus ipsa deleniti consectetur natus
+                        atque delectus quae laudantium consequatur! Perferendis inventore distinctio deleniti ratione
+                        sit in velit consectetur molestiae recusandae? Dolorem nihil, quas, sequi cumque pariatur quia,
+                        omnis doloribus harum quaerat magnam delectus? Alias eius aspernatur, laborum sed cum inventore?
+                        Excepturi distinctio aut sapiente omnis vel nemo atque, quidem incidunt dolorum eos, dicta
+                        provident! Recusandae?</p>
+                </div>
+                <div class="cooperation-baner"></div>
             </div>
         </section>
 
